CSS aangepast voor subtielere weergave van username

--- a/website/WAD-IQC/database/iqc/css/styles.css
+++ b/website/WAD-IQC/database/iqc/css/styles.css
@@ -21,6 +21,17 @@
  ;
 }
 
+.table_data_user{
+ font-family: arial;
+ font-size: 12px;
+ font-style: normal;
+ font-variant: normal;
+ font-weight: normal;
+ color: red;
+ text-decoration: none;
+ ;
+}
+
 .table_data_orange {
  font-family: arial;
  font-size: 12px;
